version/0.32/_sources/api/deprecated_apis.rst.txt
:orphan:

Deprecated APIs
===============

Deprecated PyFluent APIs
------------------------

.. list-table:: Deprecated PyFluent APIs
   :header-rows: 1

   * - Target
     - Deprecated
     - Alternatives
   * - :py:meth:`ansys.fluent.core.services.scheme_eval.SchemeEval.scheme_eval <ansys.fluent.core.services.scheme_eval.SchemeEval.scheme_eval>`
     - 0.32
     - :py:meth:`ansys.fluent.core.services.scheme_eval.SchemeEval.eval <ansys.fluent.core.services.scheme_eval.SchemeEval.eval>`
   * - :py:meth:`ansys.fluent.core.session.BaseSession.scheme_eval <ansys.fluent.core.session.BaseSession.scheme_eval>`
     - 0.32
     - :py:meth:`ansys.fluent.core.session.BaseSession.scheme <ansys.fluent.core.session.BaseSession.scheme>`
   * - :py:meth:`ansys.fluent.core.fluent_connection.FluentConnection.health_check <ansys.fluent.core.fluent_connection.FluentConnection.health_check>`
     - 0.32
     - N/A
   * - :py:meth:`ansys.fluent.core.session.BaseSession.health_check <ansys.fluent.core.session.BaseSession.health_check>`
     - 0.32
     - :py:meth:`ansys.fluent.core.session.BaseSession.is_server_healthy <ansys.fluent.core.session.BaseSession.is_server_healthy>`
   * - :py:meth:`ansys.fluent.core.file_session.Transaction.add_surfaces_request <ansys.fluent.core.file_session.Transaction.add_surfaces_request>`
     - 0.25.0
     - :py:meth:`ansys.fluent.core.file_session.Transaction.add_requests <ansys.fluent.core.file_session.Transaction.add_requests>`
   * - :py:meth:`ansys.fluent.core.file_session.Transaction.add_scalar_fields_request <ansys.fluent.core.file_session.Transaction.add_scalar_fields_request>`
     - 0.25.0
     - :py:meth:`ansys.fluent.core.file_session.Transaction.add_requests <ansys.fluent.core.file_session.Transaction.add_requests>`
   * - :py:meth:`ansys.fluent.core.file_session.Transaction.add_vector_fields_request <ansys.fluent.core.file_session.Transaction.add_vector_fields_request>`
     - 0.25.0
     - :py:meth:`ansys.fluent.core.file_session.Transaction.add_requests <ansys.fluent.core.file_session.Transaction.add_requests>`
   * - :py:meth:`ansys.fluent.core.file_session.FileFieldData.get_surface_data <ansys.fluent.core.file_session.FileFieldData.get_surface_data>`
     - 0.25.0
     - :py:meth:`ansys.fluent.core.file_session.FileFieldData.get_field_data <ansys.fluent.core.file_session.FileFieldData.get_field_data>`
   * - :py:meth:`ansys.fluent.core.file_session.FileFieldData.get_scalar_field_data <ansys.fluent.core.file_session.FileFieldData.get_scalar_field_data>`
     - 0.25.0
     - :py:meth:`ansys.fluent.core.file_session.FileFieldData.get_field_data <ansys.fluent.core.file_session.FileFieldData.get_field_data>`
   * - :py:meth:`ansys.fluent.core.file_session.FileFieldData.get_vector_field_data <ansys.fluent.core.file_session.FileFieldData.get_vector_field_data>`
     - 0.25.0
     - :py:meth:`ansys.fluent.core.file_session.FileFieldData.get_field_data <ansys.fluent.core.file_session.FileFieldData.get_field_data>`
   * - :py:meth:`ansys.fluent.core.session.BaseSession.field_info <ansys.fluent.core.session.BaseSession.field_info>`
     - 0.20.dev9
     - `session.fields.field_info`
   * - :py:meth:`ansys.fluent.core.session.BaseSession.field_data <ansys.fluent.core.session.BaseSession.field_data>`
     - 0.20.dev9
     - `session.fields.field_data`
   * - :py:meth:`ansys.fluent.core.session.BaseSession.field_data_streaming <ansys.fluent.core.session.BaseSession.field_data_streaming>`
     - 0.20.dev9
     - `session.fields.field_data_streaming`
   * - :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_surfaces_request <ansys.fluent.core.services.field_data.Transaction.add_surfaces_request>`
     - 0.23.dev0
     - :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_requests <ansys.fluent.core.services.field_data.Transaction.add_requests>`
   * - :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_scalar_fields_request <ansys.fluent.core.services.field_data.Transaction.add_scalar_fields_request>`
     - 0.23.dev0
     - :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_requests <ansys.fluent.core.services.field_data.Transaction.add_requests>`
   * - :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_vector_fields_request <ansys.fluent.core.services.field_data.Transaction.add_vector_fields_request>`
     - 0.23.dev0
     - :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_requests <ansys.fluent.core.services.field_data.Transaction.add_requests>`
   * - :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_pathlines_fields_request <ansys.fluent.core.services.field_data.Transaction.add_pathlines_fields_request>`
     - 0.23.dev0
     - :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_requests <ansys.fluent.core.services.field_data.Transaction.add_requests>`
   * - The `surface_names` argument of :py:meth:`ansys.fluent.core.file_session.Transaction.add_surfaces_request <ansys.fluent.core.file_session.Transaction.add_surfaces_request>`
     - 0.25.0
     - `surfaces`
   * - The `surface_names` argument of :py:meth:`ansys.fluent.core.file_session.Transaction.add_scalar_fields_request <ansys.fluent.core.file_session.Transaction.add_scalar_fields_request>`
     - 0.25.0
     - `surfaces`
   * - The `surface_names` argument of :py:meth:`ansys.fluent.core.file_session.Transaction.add_vector_fields_request <ansys.fluent.core.file_session.Transaction.add_vector_fields_request>`
     - 0.25.0
     - `surfaces`
   * - The `surface_names` argument of :py:meth:`ansys.fluent.core.file_session.Transaction.add_pathlines_fields_request <ansys.fluent.core.file_session.Transaction.add_pathlines_fields_request>`
     - 0.25.0
     - `surfaces`
   * - The `surface_ids` argument of :py:meth:`ansys.fluent.core.file_session.Transaction.add_surfaces_request <ansys.fluent.core.file_session.Transaction.add_surfaces_request>`
     - 0.25.0
     - `surfaces`
   * - The `surface_ids` argument of :py:meth:`ansys.fluent.core.file_session.Transaction.add_scalar_fields_request <ansys.fluent.core.file_session.Transaction.add_scalar_fields_request>`
     - 0.25.0
     - `surfaces`
   * - The `surface_ids` argument of :py:meth:`ansys.fluent.core.file_session.Transaction.add_vector_fields_request <ansys.fluent.core.file_session.Transaction.add_vector_fields_request>`
     - 0.25.0
     - `surfaces`
   * - The `surface_ids` argument of :py:meth:`ansys.fluent.core.file_session.Transaction.add_pathlines_fields_request <ansys.fluent.core.file_session.Transaction.add_pathlines_fields_request>`
     - 0.25.0
     - `surfaces`
   * - The `surface_names` argument of :py:meth:`ansys.fluent.core.file_session.FileFieldData.get_surface_data <ansys.fluent.core.file_session.FileFieldData.get_surface_data>`
     - 0.25.0
     - `surfaces`
   * - The `surface_names` argument of :py:meth:`ansys.fluent.core.file_session.FileFieldData.get_scalar_field_data <ansys.fluent.core.file_session.FileFieldData.get_scalar_field_data>`
     - 0.25.0
     - `surfaces`
   * - The `surface_names` argument of :py:meth:`ansys.fluent.core.file_session.FileFieldData.get_vector_field_data <ansys.fluent.core.file_session.FileFieldData.get_vector_field_data>`
     - 0.25.0
     - `surfaces`
   * - The `surface_names` argument of :py:meth:`ansys.fluent.core.file_session.FileFieldData.get_pathlines_field_data <ansys.fluent.core.file_session.FileFieldData.get_pathlines_field_data>`
     - 0.25.0
     - `surfaces`
   * - The `surface_ids` argument of :py:meth:`ansys.fluent.core.file_session.FileFieldData.get_surface_data <ansys.fluent.core.file_session.FileFieldData.get_surface_data>`
     - 0.25.0
     - `surfaces`
   * - The `surface_ids` argument of :py:meth:`ansys.fluent.core.file_session.FileFieldData.get_scalar_field_data <ansys.fluent.core.file_session.FileFieldData.get_scalar_field_data>`
     - 0.25.0
     - `surfaces`
   * - The `surface_ids` argument of :py:meth:`ansys.fluent.core.file_session.FileFieldData.get_vector_field_data <ansys.fluent.core.file_session.FileFieldData.get_vector_field_data>`
     - 0.25.0
     - `surfaces`
   * - The `surface_ids` argument of :py:meth:`ansys.fluent.core.file_session.FileFieldData.get_pathlines_field_data <ansys.fluent.core.file_session.FileFieldData.get_pathlines_field_data>`
     - 0.25.0
     - `surfaces`
   * - The `container_mount_path` argument of :py:meth:`ansys.fluent.core.utils.file_transfer_service.ContainerFileTransferStrategy <ansys.fluent.core.utils.file_transfer_service.ContainerFileTransferStrategy>`
     - 0.23.dev1
     - `mount_target`
   * - The `host_mount_path` argument of :py:meth:`ansys.fluent.core.utils.file_transfer_service.ContainerFileTransferStrategy <ansys.fluent.core.utils.file_transfer_service.ContainerFileTransferStrategy>`
     - 0.23.dev1
     - `mount_source`
   * - The `container_mount_path` argument of :py:func:`ansys.fluent.core.launcher.fluent_container.configure_container_dict <ansys.fluent.core.launcher.fluent_container.configure_container_dict>`
     - 0.23.dev1
     - `mount_target`
   * - The `host_mount_path` argument of :py:func:`ansys.fluent.core.launcher.fluent_container.configure_container_dict <ansys.fluent.core.launcher.fluent_container.configure_container_dict>`
     - 0.23.dev1
     - `mount_source`
   * - The `show_gui` argument of :py:func:`ansys.fluent.core.launcher.launcher.launch_fluent <ansys.fluent.core.launcher.launcher.launch_fluent>`
     - 0.22.dev0
     - `ui_mode`
   * - The `version` argument of :py:func:`ansys.fluent.core.launcher.launcher.launch_fluent <ansys.fluent.core.launcher.launcher.launch_fluent>`
     - 0.22.dev0
     - `dimension`
   * - The `surface_names` argument of :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_surfaces_request <ansys.fluent.core.services.field_data.Transaction.add_surfaces_request>`
     - 0.23.dev0
     - `surfaces`
   * - The `surface_names` argument of :py:meth:`nsys.fluent.core.services.field_data.Transaction.add_scalar_fields_request <ansys.fluent.core.services.field_data.Transaction.add_scalar_fields_request>`
     - 0.23.dev0
     - `surfaces`
   * - The `surface_names` argument of :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_vector_fields_request <ansys.fluent.core.services.field_data.Transaction.add_vector_fields_request>`
     - 0.23.dev0
     - `surfaces`
   * - The `surface_names` argument of :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_pathlines_fields_request <ansys.fluent.core.services.field_data.Transaction.add_pathlines_fields_request>`
     - 0.23.dev0
     - `surfaces`
   * - The `surface_ids` argument of :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_surfaces_request <ansys.fluent.core.services.field_data.Transaction.add_surfaces_request>`
     - 0.23.dev0
     - `surfaces`
   * - The `surface_ids` argument of :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_scalar_fields_request <ansys.fluent.core.services.field_data.Transaction.add_scalar_fields_request>`
     - 0.23.dev0
     - `surfaces`
   * - The `surface_ids` argument of :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_vector_fields_request <ansys.fluent.core.services.field_data.Transaction.add_vector_fields_request>`
     - 0.23.dev0
     - `surfaces`
   * - The `surface_ids` argument of :py:meth:`ansys.fluent.core.services.field_data.Transaction.add_pathlines_fields_request <ansys.fluent.core.services.field_data.Transaction.add_pathlines_fields_request>`
     - 0.23.dev0
     - `surfaces`
Deprecated Ansys Fluent APIs
----------------------------

.. list-table:: Deprecated Ansys Fluent APIs
   :header-rows: 1

   * - Target
     - Deprecated
   * - :ref:`solver.results.graphics.contours.coloring (Object) <coloring>`
     - 2025R2
   * - :ref:`solver.results.graphics.vector["name"].skip (Parameter) <skip>`
     - 2025R1
   * - :ref:`solver.results.graphics.vector["name"].style (Parameter) <style>`
     - 2025R1
   * - :ref:`solver.results.graphics.pathline["name"].skip (Parameter) <skip>`
     - 2025R1
   * - :ref:`solver.results.graphics.pathline["name"].step (Parameter) <step>`
     - 2025R1
   * - :ref:`solver.results.graphics.mesh["name"].coloring (Object) <coloring>`
     - 2025R2
   * - :ref:`solver.results.graphics.mesh["name"].edge_type (Object) <edge_type>`
     - 2025R2
   * - :ref:`solver.results.graphics.contour["name"].coloring (Object) <coloring>`
     - 2025R2
   * - :ref:`solver.results.graphics.pathline["name"].onzone (Parameter) <onzone>`
     - 2025R1
   * - :ref:`solver.results.surfaces.ungroup_surfaces (Command) <ungroup_surfaces>`
     - 2025R1
   * - :ref:`solver.results.graphics.contours.node_values (Parameter) <node_values>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].skip (Parameter) <skip>`
     - 2025R1
   * - :ref:`solver.results.graphics.vector["name"].options.skip (Parameter) <skip>`
     - 2025R1
   * - :ref:`solver.results.plot.solution_plot.node_values (Parameter) <node_values>`
     - 2025R1
   * - :ref:`solver.results.graphics.pathline["name"].option.skip (Parameter) <skip>`
     - 2025R1
   * - :ref:`solver.results.graphics.pathline["name"].option.step (Parameter) <step>`
     - 2025R1
   * - :ref:`solver.results.graphics.lic["name"].range_option (Object) <range_option>`
     - 2025R1
   * - :ref:`solver.results.graphics.olic["name"].range_option (Object) <range_option>`
     - 2025R1
   * - :ref:`solver.results.graphics.vector["name"].range_option (Object) <range_option>`
     - 2025R1
   * - :ref:`solver.results.graphics.pathline["name"].option.onzone (Parameter) <onzone>`
     - 2025R1
   * - :ref:`solver.results.graphics.contour["name"].range_option (Object) <range_option>`
     - 2025R1
   * - :ref:`solver.results.graphics.contour["name"].node_values (Parameter) <node_values>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].option.skip (Parameter) <skip>`
     - 2025R1
   * - :ref:`solver.results.plot.profile_data.y_axis_function (Parameter) <y_axis_function>`
     - 2025R1
   * - :ref:`solver.results.surfaces.create_group_surfaces (Command) <create_group_surfaces>`
     - 2025R1
   * - :ref:`solver.results.plot.xy_plot["name"].option.node_values (Parameter) <node_values>`
     - 2025R1
   * - :ref:`solver.results.plot.xy_plot["name"].options.node_values (Parameter) <node_values>`
     - 2025R1
   * - :ref:`solver.results.graphics.contour["name"].contour_lines (Parameter) <contour_lines>`
     - 2025R1
   * - :ref:`solver.results.plot.xy_plot["name"].y_axis_function (Parameter) <y_axis_function>`
     - 2025R1
   * - :ref:`solver.results.graphics.pathline["name"].style_attribute.style (Parameter) <style>`
     - 2025R1
   * - :ref:`solver.results.graphics.pathline["name"].style_attributes.style (Parameter) <style>`
     - 2025R1
   * - :ref:`solver.results.graphics.pathline["name"].style_attribute (Object) <style_attribute>`
     - 2025R1
   * - :ref:`solver.results.plot.interpolated_data.y_axis_function (Parameter) <y_axis_function>`
     - 2025R1
   * - :ref:`solver.setup.physics.boundaries.wall["name"].momentum.rotating (Parameter) <rotating>`
     - 2025R1
   * - :ref:`solver.results.graphics.pathline["name"].option.node_values (Parameter) <node_values>`
     - 2025R1
   * - :ref:`solver.results.graphics.contour["name"].options.node_values (Parameter) <node_values>`
     - 2025R1
   * - :ref:`solver.results.graphics.contour["name"].boundary_values (Parameter) <boundary_values>`
     - 2025R1
   * - :ref:`solver.setup.boundary_conditions.wall["name"].momentum.rotating (Parameter) <rotating>`
     - 2025R1
   * - :ref:`solver.results.graphics.pathline["name"].options.node_values (Parameter) <node_values>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].vector_setting.style (Parameter) <style>`
     - 2025R1
   * - :ref:`solver.results.graphics.mesh["name"].edge_type_options.edge_type (Parameter) <edge_type>`
     - 2025R2
   * - :ref:`solver.results.graphics.particle_track["name"].vector_settings.style (Parameter) <style>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].style_attribute.style (Parameter) <style>`
     - 2025R1
   * - :ref:`solver.results.graphics.contour["name"].options.contour_lines (Parameter) <contour_lines>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].style_attributes.style (Parameter) <style>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].style_attribute (Object) <style_attribute>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].vector_settings (Object) <vector_settings>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].filter_settings (Object) <filter_settings>`
     - 2025R1
   * - :ref:`solver.setup.physics.boundaries.wall["name"].turbulence.rough_nasa (Parameter) <rough_nasa>`
     - 2025R1
   * - :ref:`solver.setup.physics.boundaries.wall["name"].turbulence.rough_data (Parameter) <rough_data>`
     - 2025R1
   * - :ref:`solver.setup.models.discrete_phase.numerics.node_based_averaging.kernel (Parameter) <kernel>`
     - 2025R1
   * - :ref:`solver.setup.boundary_conditions.wall["name"].turbulence.rough_nasa (Parameter) <rough_nasa>`
     - 2025R1
   * - :ref:`solver.setup.boundary_conditions.wall["name"].turbulence.rough_data (Parameter) <rough_data>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].options.node_values (Parameter) <node_values>`
     - 2025R1
   * - :ref:`solver.results.graphics.contour["name"].options.boundary_values (Parameter) <boundary_values>`
     - 2025R1
   * - :ref:`solver.results.plot.xy_plot["name"].y_axis_data.y_axis_function (Parameter) <y_axis_function>`
     - 2025R1
   * - :ref:`solver.setup.physics.boundaries.wall["name"].phase["name"].momentum.rotating (Parameter) <rotating>`
     - 2025R1
   * - :ref:`solver.setup.boundary_conditions.wall["name"].phase["name"].momentum.rotating (Parameter) <rotating>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].wall_film_particles (Parameter) <wall_film_particles>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].track_pdf_particles (Parameter) <track_pdf_particles>`
     - 2025R1
   * - :ref:`solver.setup.physics.boundaries.wall["name"].turbulence.rough_shin_et_al (Parameter) <rough_shin_et_al>`
     - 2025R1
   * - :ref:`solver.setup.boundary_conditions.wall["name"].turbulence.rough_shin_et_al (Parameter) <rough_shin_et_al>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].free_stream_particles (Parameter) <free_stream_particles>`
     - 2025R1
   * - :ref:`solver.setup.physics.boundaries.wall["name"].phase["name"].turbulence.rough_nasa (Parameter) <rough_nasa>`
     - 2025R1
   * - :ref:`solver.setup.physics.boundaries.wall["name"].phase["name"].turbulence.rough_data (Parameter) <rough_data>`
     - 2025R1
   * - :ref:`solver.setup.boundary_conditions.wall["name"].phase["name"].turbulence.rough_nasa (Parameter) <rough_nasa>`
     - 2025R1
   * - :ref:`solver.setup.boundary_conditions.wall["name"].phase["name"].turbulence.rough_data (Parameter) <rough_data>`
     - 2025R1
   * - :ref:`solver.solution.report_definitions.vbm["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.solution.report_definitions.lift["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.solution.report_definitions.flux["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.solution.report_definitions.mesh["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.solution.report_definitions.drag["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.solution.report_definitions.time["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.results.graphics.particle_track["name"].option.wall_film_particles (Parameter) <wall_film_particles>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].option.track_pdf_particles (Parameter) <track_pdf_particles>`
     - 2025R1
   * - :ref:`solver.setup.models.viscous.transition_sst.roughness_correlation_fcn (Parameter) <roughness_correlation_fcn>`
     - 2025R2
   * - :ref:`solver.solution.report_definitions.icing["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.solution.report_definitions.force["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.solution.report_definitions.volume["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.solution.report_definitions.moment["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.solution.report_definitions.custom["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.solution.report_definitions.surface["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.results.graphics.particle_tracks.track_single_particle_stream (Parameter) <track_single_particle_stream>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].option.free_stream_particles (Parameter) <free_stream_particles>`
     - 2025R1
   * - :ref:`solver.solution.report_definitions.injection["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.solution.report_definitions.expression["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.design.gradient_based.design_tool.design_conditions.definition["name"].orientation.skip (Parameter) <skip>`
     - 2025R1
   * - :ref:`solver.solution.report_definitions.user_defined["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.results.graphics.particle_track["name"].track_single_particle_stream (Object) <track_single_particle_stream>`
     - 2025R1
   * - :ref:`solver.setup.physics.volumes.fluid["name"].boundaries.wall["name"].settings.momentum.rotating (Parameter) <rotating>`
     - 2025R1
   * - :ref:`solver.setup.physics.volumes.solid["name"].boundaries.wall["name"].settings.momentum.rotating (Parameter) <rotating>`
     - 2025R1
   * - :ref:`solver.solution.report_definitions.aeromechanics["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.setup.physics.boundaries.wall["name"].phase["name"].turbulence.rough_shin_et_al (Parameter) <rough_shin_et_al>`
     - 2025R1
   * - :ref:`solver.setup.boundary_conditions.wall["name"].phase["name"].turbulence.rough_shin_et_al (Parameter) <rough_shin_et_al>`
     - 2025R1
   * - :ref:`solver.design.geometry.parameterize_and_explore.design_conditions.definition["name"].orientation.skip (Parameter) <skip>`
     - 2025R1
   * - :ref:`solver.setup.physics.volumes.solid["name"].boundaries.wall["name"].settings.turbulence.rough_nasa (Parameter) <rough_nasa>`
     - 2025R1
   * - :ref:`solver.setup.physics.volumes.fluid["name"].boundaries.wall["name"].settings.turbulence.rough_nasa (Parameter) <rough_nasa>`
     - 2025R1
   * - :ref:`solver.setup.physics.volumes.fluid["name"].boundaries.wall["name"].settings.turbulence.rough_data (Parameter) <rough_data>`
     - 2025R1
   * - :ref:`solver.setup.physics.volumes.solid["name"].boundaries.wall["name"].settings.turbulence.rough_data (Parameter) <rough_data>`
     - 2025R1
   * - :ref:`solver.results.graphics.particle_track["name"].option.track_single_particle_stream (Object) <track_single_particle_stream>`
     - 2025R1
   * - :ref:`solver.solution.report_definitions.single_valued_expression["name"].create_output_parameter (Command) <create_output_parameter>`
     - 2024R2
   * - :ref:`solver.setup.models.discrete_phase.physical_models.particle_forces.pressure_gradient_force (Parameter) <pressure_gradient_force>`
     - 2024R2
   * - :ref:`solver.setup.physics.volumes.fluid["name"].boundaries.wall["name"].settings.phase["name"].momentum.rotating (Parameter) <rotating>`
     - 2025R1
   * - :ref:`solver.setup.physics.volumes.solid["name"].boundaries.wall["name"].settings.phase["name"].momentum.rotating (Parameter) <rotating>`
     - 2025R1
   * - :ref:`solver.setup.physics.volumes.solid["name"].boundaries.wall["name"].settings.turbulence.rough_shin_et_al (Parameter) <rough_shin_et_al>`
     - 2025R1
   * - :ref:`solver.setup.physics.volumes.fluid["name"].boundaries.wall["name"].settings.turbulence.rough_shin_et_al (Parameter) <rough_shin_et_al>`
     - 2025R1
   * - :ref:`solver.setup.physics.volumes.fluid["name"].boundaries.wall["name"].settings.phase["name"].turbulence.rough_nasa (Parameter) <rough_nasa>`
     - 2025R1
   * - :ref:`solver.setup.physics.volumes.solid["name"].boundaries.wall["name"].settings.phase["name"].turbulence.rough_nasa (Parameter) <rough_nasa>`
     - 2025R1
   * - :ref:`solver.setup.physics.volumes.solid["name"].boundaries.wall["name"].settings.phase["name"].turbulence.rough_data (Parameter) <rough_data>`
     - 2025R1
   * - :ref:`solver.setup.physics.volumes.fluid["name"].boundaries.wall["name"].settings.phase["name"].turbulence.rough_data (Parameter) <rough_data>`
     - 2025R1
   * - :ref:`solver.setup.models.discrete_phase.physical_models.wall_film.include_convective_heat_transfer (Parameter) <include_convective_heat_transfer>`
     - 2023R2
   * - :ref:`solver.setup.physics.volumes.fluid["name"].boundaries.wall["name"].settings.phase["name"].turbulence.rough_shin_et_al (Parameter) <rough_shin_et_al>`
     - 2025R1
   * - :ref:`solver.setup.physics.volumes.solid["name"].boundaries.wall["name"].settings.phase["name"].turbulence.rough_shin_et_al (Parameter) <rough_shin_et_al>`
     - 2025R1
